Update services and add new services set angular.json

--- a/angular.json
+++ b/angular.json
@@ -50,6 +50,10 @@
                     "defaultConfiguration": "production"
                 },
                 "serve": {
+                    "options": {
+                        "host": "codementor.com",
+                        "allowedHosts": ["codementor.com"]
+                    },
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
